[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django_descope"
version = "0.0.dev0"
description = "Descope plugin for Django"
readme = "README.md"
authors = ["Descope <info@descope.com>"]
repository = "https://github.com/descope/django-descope"
documentation = "https://docs.descope.com"
keywords = ["descope", "jwt", "authentication", "django"]
license = "MIT"
include = [
    "LICENSE",
    "README.md",
    "src/django_descope/**",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",

]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Django = "==4.2"
descope = "1.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
black = "23.3.0"
pre-commit = "3.2.1"
liccheck = "0.8.3"
isort = "5.12.0"
python-dotenv = "1.0.0"
tox = "4.4.8"
django-debug-toolbar = "3.8.1"

# Authorized and unauthorized licenses in LOWER CASE
[tool.liccheck]
authorized_licenses= [
        "bsd",
        "new bsd",
        "bsd license",
        "new bsd license",
        "simplified bsd",
        "apache",
        "apache 2.0",
        "apache software",
        "apache software license",
        "isc",
        "isc license",
        "isc license (iscl)",
        "mit",
        "mit license",
        "python software foundation",
        "python software foundation license",
]

unauthorized_licenses = [
        "gpl v3",
        "gnu lgpl",
        "lgpl with exceptions or zpl",
        "zpl 2.1",
]

[tool.liccheck.authorized_packages]
# Apache-2.0 license
coverage = "6.3.3"
# CC0 1.0 Universal (CC0 1.0) Public Domain Dedication license
email-validator = ">=1.3.0"
#Public Domain (filelock package is dependency of filelock << virtualenv << pre-commit)
filelock = ">=3.4.1"
#Mozilla Public License 2.0 (MPL 2.0) (certifi package is dependency of requests
certifi = ">=2021.10.8"
