[build-system]
requires = ["poetry>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django_descope"
version = "0.0.dev0"
description = "Descope plugin for Django"
readme = "README.md"
authors = ["Descope <info@descope.com>"]
repository = "https://github.com/descope/django-descope"
documentation = "https://docs.descope.com"
keywords = ["descope", "jwt", "authentication", "django"]
license = "MIT"
include = ["LICENSE", "README.md", "src/django_descope/**"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",

]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Django = ">=3.2.19,<5.3"
descope = "^1.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "7.3.0"
black = "25.11.0"
pre-commit = { version = "4.4.0", python = ">=3.9" }
liccheck = "0.9.2"
isort = "6.1.0"
python-dotenv = "1.2.0"
tox = "4.31.0"
django-debug-toolbar = "5.2.0"
django-stubs = {version = "5.2.8", python = ">=3.10"}

# Authorized and unauthorized licenses in LOWER CASE
[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "isc",
    "isc license",
    "isc license (iscl)",
    "mit",
    "mit license",
    "python software foundation",
    "python software foundation license",
]

unauthorized_licenses = [
    "gpl v3",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "zpl 2.1",
]

[tool.liccheck.authorized_packages]
# Apache-2.0 license
coverage = "6.3.3"
# CC0 1.0 Universal (CC0 1.0) Public Domain Dedication license
email-validator = ">=1.3.0"
#Public Domain (filelock package is dependency of filelock << virtualenv << pre-commit)
filelock = ">=3.4.1"
#Mozilla Public License 2.0 (MPL 2.0) (certifi package is dependency of requests
certifi = ">=2021.10.8"

[tool.black]
line-length = 119

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_first_party = ["config"]
