[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[project]
name = "django_descope"
version = "0.0.dev0"
description = "Descope plugin for Django"
authors = [{ name = "Descope", email = "info@descope.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "descope",
    "jwt",
    "authentication",
    "django",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Django>=3.2.19,<5.3",
    "descope>=1.5.1,<2",
]

[project.urls]
Repository = "https://github.com/descope/django-descope"
Documentation = "https://docs.descope.com"

[dependency-groups]
dev = [
    "ruff==0.8.6",
    "pre-commit==4.3.0 ; python_full_version >= '3.9'",
    "liccheck==0.9.2",
    "python-dotenv==1.1.1",
    "tox==4.31.0 ; python_full_version >= '3.10'",
    "tox<4.31.0 ; python_full_version < '3.10'",
    "django-debug-toolbar==5.2.0",
    "django-stubs==5.2.7 ; python_full_version >= '3.10'",
    "licensecheck==2025.1.0",
]

[tool.uv.build-backend]
module-root = ""
source-include = [
    "LICENSE",
    "README.md",
    "src/django_descope/**",
]

# Authorized and unauthorized licenses in LOWER CASE
[tool.licensecheck]
show_only_failing = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "DJ",     # django-specific rules
]
ignore = [
    "E402",   # module level import not at top of file
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "DJ"]
"**/settings.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "django_descope"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
