[tool.poetry]
name = "django-descope-example"
version = "0.1.0"
description = "Example Django site using Descope"
authors = ["Descope <info@descope.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1"
descope-django = {path = ".."}

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
